[project]
name = "llm-claude-code-plugin"
version = "0.1.1"
description = "LLM plugin for Claude Code integration"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "llm>=0.23"
]
authors = [
    {name = "Edward Champion"}
]
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]

[project.entry-points.llm]
claude_code = "llm_claude_code"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/paradise-runner/llm-claude-code"
Changelog = "https://github.com/paradise-runner/llm-claude-code/releases"
Issues = "https://github.com/paradise-runner/llm-claude-code/issues"